[package]
name = "bitcoin-cli-wallet"
version = "0.1.0"
authors = ["devtbit"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.21", features = ["use-serde"] }
bitcoin-wallet = "1.1.0"
clap = "3.0.0-beta.2"
termion = "*"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "^0.2"
hex = "*"
bitcoin_hashes = "0.7.6"